# smart_device_pandazone

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/.espressif/: esp_idf.json
components/dht22/: CMakeLists.txt  dht22.c
components/sct013-30a/: CMakeLists.txt  sct013-30a.c
components/sct013-30a/include/: sct013-30a.h
main/: CMakeLists.txt  auxx.txt  client.crt  client.key  esp32_rmt_midea_ir_tx.c  mesh_main.c  midea_ir.c  mqtt_app.c  wifi.c
main/include/: esp32_rmt_midea_ir_tx.h  midea_ir.h  mqtt_app.h  wifi.h
